; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_hook.c_test_alloc_hook.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_hook.c_test_alloc_hook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@call_count = common dso_local global i32 0, align 4
@arg_extra = common dso_local global i8* null, align 8
@arg_type = common dso_local global i32 0, align 4
@arg_result = common dso_local global i8* null, align 8
@arg_result_raw = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64, i8*, i64, i64*)* @test_alloc_hook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_alloc_hook(i8* %0, i64 %1, i8* %2, i64 %3, i64* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64*, align 8
  store i8* %0, i8** %6, align 8
  store i64 %1, i64* %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = load i32, i32* @call_count, align 4
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* @call_count, align 4
  %13 = load i8*, i8** %6, align 8
  store i8* %13, i8** @arg_extra, align 8
  %14 = load i64, i64* %7, align 8
  %15 = trunc i64 %14 to i32
  store i32 %15, i32* @arg_type, align 4
  %16 = load i8*, i8** %8, align 8
  store i8* %16, i8** @arg_result, align 8
  %17 = load i64, i64* %9, align 8
  store i64 %17, i64* @arg_result_raw, align 8
  %18 = load i64*, i64** %10, align 8
  %19 = call i32 @set_args_raw(i64* %18, i32 3)
  %20 = call i32 (...) @be_reentrant()
  ret void
}

declare dso_local i32 @set_args_raw(i64*, i32) #1

declare dso_local i32 @be_reentrant(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
